persist pre-merge patient data to support unmerge